# qa-automation-learning

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  requirements.txt
docs/: LEARNING_LOG.md  PLAYWRIGHT_LEARNING_PLAN.md  SETUP_GUIDE.md
src/: __init__.py
tests/: __init__.py  conftest.py  test_setup_verification.py
