[project]
name = "qa-automation-learning"
version = "0.1.0"
description = "Test automation learning project with pytest and Playwright"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Critical path tests — run on every commit",
    "regression: Full regression suite",
    "slow: Tests that take longer than 5 seconds",
]
addopts = "-v --tb=short -p no:playwright"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
